name:                psc-ide
version:             0.1.0.0
synopsis:            Language support for the PureScript programming language
description:         Please see README.md
homepage:            http://github.com/kRITZCREEK/psc-ide#readme
license:             BSD3
license-file:        LICENSE
author:              Christoph Hegemann
maintainer:          christoph.hegemann@gmx.net
copyright:           2015 Christoph Hegemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:        lib
  exposed-modules:       Purescript.Ide
                       , Purescript.Ide.Command
                       , Purescript.Ide.Externs
                       , Purescript.Ide.CodecJSON
                       , Purescript.Ide.Pursuit
  default-language:      Haskell2010
  build-depends:         aeson
                       , base >= 4.7 && < 5
                       , containers
                       , mtl
                       , parsec
                       , text
                       , wreq
                       , lens
                       , lens-aeson
  default-extensions:    OverloadedStrings

executable psc-ide
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , psc-ide
                     , mtl
                     , text
                     , optparse-applicative
                     , network

executable psc-ide-server
  hs-source-dirs:      server
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , directory
                     , filepath
                     , lens
                     , lens-aeson
                     , mtl
                     , network
                     , optparse-applicative
                     , psc-ide
                     , text

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  other-modules:       Purescript.Ide.CommandSpec
  build-depends:       base    >= 4.7 && < 5
                     , psc-ide
                     , hspec
