name:                psc-ide
version:             0.5.0
synopsis:            Language support for the PureScript programming language
description:         Please see README.md
homepage:            http://github.com/kRITZCREEK/psc-ide
license:             MIT
license-file:        LICENSE
author:              Christoph Hegemann
maintainer:          christoph.hegemann1337@gmail.com
copyright:           2015 Christoph Hegemann
category:            PureScript, Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:        lib
  exposed-modules:       PureScript.Ide
                       , PureScript.Ide.Command
                       , PureScript.Ide.Externs
                       , PureScript.Ide.Error
                       , PureScript.Ide.CodecJSON
                       , PureScript.Ide.Pursuit
                       , PureScript.Ide.Completion
                       , PureScript.Ide.Matcher
                       , PureScript.Ide.Filter
                       , PureScript.Ide.Types
                       , PureScript.Ide.SourceFile
                       , PureScript.Ide.Reexports
  default-language:      Haskell2010
  build-depends:         aeson
                       , base >= 4.7 && < 5
                       , bytestring
                       , containers
                       , directory
                       , either
                       , filepath
                       , http-client
                       , lens
                       , lens-aeson
                       , mtl
                       , parsec
                       , purescript
                       , regex-tdfa
                       , text
                       , wreq
  default-extensions:    OverloadedStrings
  ghc-options:         -O2

executable psc-ide
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , psc-ide
                     , mtl
                     , text
                     , optparse-applicative
                     , network
  ghc-options:         -O2 -Wall

executable psc-ide-server
  hs-source-dirs:      server
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:     base >= 4.7 && < 5
                   , mtl
                   , network
                   , optparse-applicative
                   , directory
                   , psc-ide
                   , text
  ghc-options:         -threaded -O2 -Wall

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Spec.hs
  other-modules:       PureScript.IdeSpec
                     , PureScript.Ide.FilterSpec
                     , PureScript.Ide.MatcherSpec
                     , PureScript.Ide.ReexportsSpec
  build-depends:       base    >= 4.7 && < 5
                     , psc-ide
                     , mtl
                     , hspec
                     , containers
